fix: update the sign-in code text

--- a/pages/login.html
+++ b/pages/login.html
@@ -436,7 +436,7 @@
             <div class="enter-code" style="display: none;">
               <form>
                 <div class="form-group">
-                  <input autofocus="" class="form-control" id="code" name="code" placeholder="sign in code" value=""
+                  <input autofocus="" class="form-control" id="code" name="code" placeholder="Type the sign in code we emailed you here" value=""
                     autocomplete="off">
                 </div>
                 <div class="button-holder">
